[project]
name = "fertilizer"
version = "0.2.4"
description = "fertilizer helps your seeds grow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bencoder",
    "colorama",
    "requests",
    "flask"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "requests-mock"]

[project.scripts]
fertilizer = "fertilizer.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
indent-width = 2

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
